deploy/openshift/sample-studio.yaml
apiVersion: v1
kind: Service
metadata:
  name: franck-studio-svc
  labels:
    studio: franck-studio
spec:
  type: ClusterIP
  selector:
    app: franck-studio
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: franck-studio-deployment
  labels:
    studio: franck-studio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: franck-studio
  template:
    metadata:
      labels:
        app: franck-studio
    spec:
      containers:
      - name: awelsstudio
        image: image-registry.openshift-image-registry.svc:5000/awels-studio/ai-studio:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        volumeMounts:
        - mountPath: "/studio"
          name: data-volume
        - mountPath: "/home/franck/.autogenstudio"
          name: studio-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: franck-studio-data-pvc
      - name: studio-volume
        persistentVolumeClaim:
          claimName: franck-studio-studio-pvc
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: franck-studio-deployment
  labels:
    studio: franck-studio
spec:
  to:
    kind: Service
    name: franck-studio-svc
    weight: 100
  port:
    targetPort: 8081
  wildcardPolicy: None
