deploy/openshift/templateStudio.yaml
piVersion: template.openshift.io/v1
kind: Template
labels: 
  app: awels-studio
  template: awels-studio
  message: This template creates a new AI Studio from Awels Engineering.
metadata:
  name: awels-studio
  annotations:
    tags: nodejs
    iconClass: icon-nodejs
    openshift.io/display-name: The Awels Studio template
    description: This Template creates a new AI Studio from Awels Engineering.
objects:
- apiVersion: v1
  kind: Service
  metadata:
    name: ${APPLICATION_NAME}-svc
    labels:
      chatbots: ${APPLICATION_NAME}
  spec:
    type: ClusterIP
    selector:
      app: ${APPLICATION_NAME}
    ports:
      - port: 8081
        targetPort: 8081
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: ${APPLICATION_NAME}-data-pvc
    labels:
      chatbots: ${APPLICATION_NAME}
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 5Gi
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: ${APPLICATION_NAME}-deployment
    labels:
      chatbots: ${APPLICATION_NAME}
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: ${APPLICATION_NAME}
    template:
      metadata:
        labels:
          app: ${APPLICATION_NAME}
      spec:
        containers:
        - name: awelsstudio
          image: image-registry.openshift-image-registry.svc:5000/awels-studio/ai-studio:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8081
          volumeMounts:
          - mountPath: "/studio"
            name: data-volume
        volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: ${APPLICATION_NAME}-data-pvc
- kind: Route
  apiVersion: route.openshift.io/v1
  metadata:
    name: ${APPLICATION_NAME}-deployment
    labels:
      chatbots: ${APPLICATION_NAME}
  spec:
    to:
      kind: Service
      name: ${APPLICATION_NAME}-svc
      weight: 100
    port:
      targetPort: 8081
    wildcardPolicy: None
parameters:
- name: APPLICATION_NAME
  description: The name of the Studio app you’d like to create
  displayName: Awels Studio Application Name
  required: true
  value: awels-ai-studio
